# FreeSWITCH

./: Freeswitch.2008.sln  Freeswitch.2010.sln
libs/esl/: fs_cli.c
libs/stfu/: Makefile.am  configure.ac
src/: switch.c  switch_core.c
src/include/: switch_version.h.template
src/mod/applications/mod_blacklist/: mod_blacklist.c
src/mod/applications/mod_spandsp/: Makefile.am  mod_spandsp_modem.h
src/mod/codecs/mod_h26x/: mod_h26x.c
src/mod/endpoints/mod_sofia/: mod_sofia.c  mod_sofia.h  sofia.c  sofia_glue.c
src/mod/languages/mod_spidermonkey/: Makefile.am
